putInQueue function has been added like the appropriate hook.All funtions, that provides an access to the API, have been moved to a special file

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "anonymous-chat",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/main.ico",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
